// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Option /> should render with correct name and value 1`] = `
<option
  class="text-tsm text-onSurface hover:bg-primaryVariant w-full cursor-pointer py-2 px-3 font-light transition-colors bg-surface"
  value="actualValue"
>
  children
</option>
`;

exports[`<Option /> should render with fallback value 1`] = `
<option
  class="text-tsm text-onSurface hover:bg-primaryVariant w-full cursor-pointer py-2 px-3 font-light transition-colors bg-surface"
  value="children"
>
  children
</option>
`;

exports[`<Option /> should render with highlighted style 1`] = `
<option
  class="text-tsm text-onSurface hover:bg-primaryVariant w-full cursor-pointer py-2 px-3 font-light transition-colors bg-primaryVariant"
  value="children"
>
  children
</option>
`;
